crates/oxc_react_compiler/tests/snapshots/exhaustive-deps__error.invalid-dep-on-ref-current-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/exhaustive-deps/error.invalid-dep-on-ref-current-value.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] MemoDependencies: Found extra memoization dependencies", labels: [LabeledSpan { label: Some("Unnecessary dependency `ref.current.value`"), span: SourceSpan { offset: 173, length: 17 }, primary: false }], help: Some("Extra dependencies can cause a value to update more often than it should, resulting in performance problems such as excessive renders or effects firing too often"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
