crates/oxc_react_compiler/tests/snapshots/exhaustive-deps__error.invalid-exhaustive-deps.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/exhaustive-deps/error.invalid-exhaustive-deps.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] MemoDependencies: Found missing/extra memoization dependencies", labels: [LabeledSpan { label: Some("Missing dependency `x?.y.z?.a`"), span: SourceSpan { offset: 191, length: 9 }, primary: false }, LabeledSpan { label: Some("Overly precise dependency `x?.y.z?.a.b`, use `x?.y.z?.a` instead"), span: SourceSpan { offset: 234, length: 11 }, primary: false }], help: Some("Missing dependencies can cause a value to update less often than it should, resulting in stale UI. Extra dependencies can cause a value to update more often than it should, resulting in performance problems such as excessive renders or effects firing too often"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] MemoDependencies: Found missing/extra memoization dependencies", labels: [LabeledSpan { label: Some("Missing dependency `x?.y.z.a?.b`"), span: SourceSpan { offset: 403, length: 11 }, primary: false }, LabeledSpan { label: Some("Overly precise dependency `x?.y.z.a?.b.z`, use `x?.y.z.a?.b` instead"), span: SourceSpan { offset: 448, length: 13 }, primary: false }], help: Some("Missing dependencies can cause a value to update less often than it should, resulting in stale UI. Extra dependencies can cause a value to update more often than it should, resulting in performance problems such as excessive renders or effects firing too often"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] MemoDependencies: Found extra memoization dependencies", labels: [LabeledSpan { label: Some("Unnecessary dependency `x`"), span: SourceSpan { offset: 740, length: 1 }, primary: false }, LabeledSpan { label: Some("Unnecessary dependency `y.z`"), span: SourceSpan { offset: 743, length: 3 }, primary: false }, LabeledSpan { label: Some("Unnecessary dependency `z?.y?.a`"), span: SourceSpan { offset: 748, length: 7 }, primary: false }, LabeledSpan { label: Some("Unnecessary dependency `UNUSED_GLOBAL`. Values declared outside of a component/hook should not be listed as dependencies as the component will not re-render if they change"), span: SourceSpan { offset: 757, length: 13 }, primary: false }], help: Some("Extra dependencies can cause a value to update more often than it should, resulting in performance problems such as excessive renders or effects firing too often"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] MemoDependencies: Found missing memoization dependencies", labels: [LabeledSpan { label: Some("Missing dependency `ref`. Refs, setState functions, and other \"stable\" values generally do not need to be added as dependencies, but this variable may change over time to point to different values"), span: SourceSpan { offset: 924, length: 3 }, primary: false }], help: Some("Missing dependencies can cause a value to update less often than it should, resulting in stale UI"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
