crates/oxc_react_compiler/tests/snapshots/exhaustive-deps__error.invalid-exhaustive-effect-deps-extra-only.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/exhaustive-deps/error.invalid-exhaustive-effect-deps-extra-only.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectExhaustiveDependencies: Found extra effect dependencies", labels: [LabeledSpan { label: Some("Unnecessary dependency `y`"), span: SourceSpan { offset: 289, length: 1 }, primary: false }], help: Some("Extra dependencies can cause an effect to fire more often than it should, resulting in performance problems such as excessive renders and side effects"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectExhaustiveDependencies: Found extra effect dependencies", labels: [LabeledSpan { label: Some("Unnecessary dependency `y`"), span: SourceSpan { offset: 396, length: 1 }, primary: false }], help: Some("Extra dependencies can cause an effect to fire more often than it should, resulting in performance problems such as excessive renders and side effects"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectExhaustiveDependencies: Found extra effect dependencies", labels: [LabeledSpan { label: Some("Overly precise dependency `x.y`, use `x` instead"), span: SourceSpan { offset: 468, length: 3 }, primary: false }], help: Some("Extra dependencies can cause an effect to fire more often than it should, resulting in performance problems such as excessive renders and side effects"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
