crates/oxc_react_compiler/tests/snapshots/exhaustive-deps__error.invalid-exhaustive-effect-deps-missing-only.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/exhaustive-deps/error.invalid-exhaustive-effect-deps-missing-only.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectExhaustiveDependencies: Found missing effect dependencies", labels: [LabeledSpan { label: Some("Missing dependency `x`"), span: SourceSpan { offset: 178, length: 1 }, primary: false }], help: Some("Missing dependencies can cause an effect to fire less often than it should"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectExhaustiveDependencies: Found missing effect dependencies", labels: [LabeledSpan { label: Some("Missing dependency `z`"), span: SourceSpan { offset: 387, length: 1 }, primary: false }], help: Some("Missing dependencies can cause an effect to fire less often than it should"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectExhaustiveDependencies: Found missing effect dependencies", labels: [LabeledSpan { label: Some("Missing dependency `x`"), span: SourceSpan { offset: 460, length: 1 }, primary: false }], help: Some("Missing dependencies can cause an effect to fire less often than it should"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
