crates/oxc_react_compiler/tests/snapshots/exhaustive-deps__error.invalid-exhaustive-effect-deps.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/exhaustive-deps/error.invalid-exhaustive-effect-deps.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectExhaustiveDependencies: Found missing effect dependencies", labels: [LabeledSpan { label: Some("Missing dependency `x`"), span: Span { start: 169, end: 170 }, primary: false }], help: Some("Missing dependencies can cause an effect to fire less often than it should"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectExhaustiveDependencies: Found extra effect dependencies", labels: [LabeledSpan { label: Some("Unnecessary dependency `y`"), span: Span { start: 251, end: 252 }, primary: false }], help: Some("Extra dependencies can cause an effect to fire more often than it should, resulting in performance problems such as excessive renders and side effects"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectExhaustiveDependencies: Found missing/extra effect dependencies", labels: [LabeledSpan { label: Some("Missing dependency `z`"), span: Span { start: 331, end: 332 }, primary: false }, LabeledSpan { label: Some("Unnecessary dependency `y`"), span: Span { start: 344, end: 345 }, primary: false }], help: Some("Missing dependencies can cause an effect to fire less often than it should. Extra dependencies can cause an effect to fire more often than it should, resulting in performance problems such as excessive renders and side effects"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] EffectExhaustiveDependencies: Found missing/extra effect dependencies", labels: [LabeledSpan { label: Some("Missing dependency `x`"), span: Span { start: 404, end: 405 }, primary: false }, LabeledSpan { label: Some("Overly precise dependency `x.y`, use `x` instead"), span: Span { start: 414, end: 417 }, primary: false }], help: Some("Missing dependencies can cause an effect to fire less often than it should. Extra dependencies can cause an effect to fire more often than it should, resulting in performance problems such as excessive renders and side effects"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
