crates/oxc_react_compiler/tests/snapshots/exhaustive-deps__error.invalid-missing-nonreactive-dep-unmemoized.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/exhaustive-deps/error.invalid-missing-nonreactive-dep-unmemoized.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] MemoDependencies: Found missing memoization dependencies", labels: [LabeledSpan { label: Some("Missing dependency `object`"), span: Span { start: 351, end: 357 }, primary: false }], help: Some("Missing dependencies can cause a value to update less often than it should, resulting in stale UI"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
